<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/dark_grey">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/sectTopBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="13.1">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/black"
                        app:titleTextColor="@color/white"
                        app:title="@string/app_name"
                        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:itemIconTint="@color/win_background"
                        app:menu="@menu/top_menu"
                        app:navigationIcon="@drawable/menu"
                        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="200sp"
                        android:layout_gravity="center"
                        android:background="@color/dark_grey"
                        tools:context=".MainActivity">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card"
                            android:layout_width="336dp"
                            android:layout_height="200dp"
                            android:checkable="true"
                            android:focusable="true"
                            app:cardElevation="0dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@android:color/white"
                            app:strokeWidth="1dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/cardLayout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/doom_banner">

                                <Button
                                    android:id="@+id/buttonGame"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16sp"
                                    android:layout_marginRight="24sp"
                                    android:layout_marginEnd="24sp"
                                    android:backgroundTint="@color/orange"
                                    android:text="@string/buy"
                                    android:textColor="@color/black"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/nameGame"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@color/black"
                                    android:padding="10sp"
                                    android:text="@string/doom"
                                    android:textColor="@color/white"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.appbar.AppBarLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNav"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                app:itemIconTint="@color/color_tab"
                app:itemTextColor="@color/color_tab"
                app:menu="@menu/bottom_menu"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
